<resources>
    <string name="app_name">kotlin_ot_project_I</string>
    <string name="teamIntroduce">팀 소개</string>
    <string name="moment">지원 계기</string>
    <string name="myGoal">나의 목표</string>
    <string name="myResolve">나의 각오</string>
    <string name="memberIntroduce">팀원 소개</string>
    <string name="projectIntroduce">프로젝트 소개</string>
    <string name="projectText"> 팀원들의 소개를 목적으로 지금까지 배운 기능인 ViewPager, LinearLayOut과 처음 사용하는 기능인 \nScrollView, RecyclerView 등을 사용해 만든 자기 소개 애플리케이션 입니다. </string>
    <string name="teamText">안드로이드 개발자를 꿈꾸며 안드로이드 과정 3기에 지원한 개발자 꿈나무들이 모여 만든 팀입니다.\n안드로이드에 관심있다는 공통점 말고도 모두 MBTI가 I로 시작하는 공통점이 있어 1조를 대신해 I조로 팀 명을 정하게 되었습니다. </string>
    <string name="back_button">BACK BUTTON</string>

    <!-- \n 을 입력하면 줄바뀜-->


    <!-- 김재현 -->
    <string name="name1">김재현</string>
    <string name="birthday1">97. 08. 02</string>
    <string name="hobby1">헬스,농구,풋살</string>
    <string name="mbti1">ISTJ</string>
    <string name="work1">팀장</string>
    <string name="moment1">현업에 있는 형에게서 앱 개발에 관한 이야기를 들었고 흥미가 생겨 지원하게 되었습니다. 사실 저는 비전공자라 아는것보다 모르는게 더 많지만 다른 분야를 배워가면서 다른 팀원들과 함께 일하면서 무언가를 만들어낸다는 것에 흥미가 생겼고 최근에는 스마트폰을 안쓰는 사람을 찾기 더 힘들다는 생각과 그에 따른 앱에 수요도 늘어났다고 생각하여 앱 개발에 관하여 알고있으면 좋을 것 같다고 생각해 지원하게 되었습니다.</string>
    <string name="goal1">취업도 목표에 있지만 회사에 들어가서 다른 사람에게 피해주지 않는, 나아가 다른 팀원을 도와줄 수 있는 능력이 되는 그런 개발자가 되고 싶습니다.</string>
    <string name="resolve1">힘들고 어려운 과정이겠지만 포기하지 않고 열심히 해보겠습니다!</string>


    <!-- 김재혁 -->
    <string name="name2">김재혁</string>
    <string name="birthday2">98. 03. 22</string>
    <string name="hobby2">자전거 타기</string>
    <string name="mbti2">INFP</string>
    <string name="work2">팀원</string>
    <string name="moment2">혼자 공부와 취업준비가 힘들어서 참여하게 되었습니다. 훌륭한 안드로이드 개발자가 되고 싶습니다!!</string>
    <string name="goal2">기초를 탄탄하게 다지고, 매일 매일 배우는 것에 즐거움을 느끼는 개발자가 되고 싶습니다.</string>
    <string name="resolve2">늦지 않았다는 생각으로 성실히 임하고 열심히 하겠습니다.</string>


    <!-- 임채명 -->
    <string name="name3">임채명</string>
    <string name="birthday3">91. 03. 18</string>
    <string name="hobby3">음악감상</string>\
    <string name="mbti3">INFJ</string>
    <string name="work3">팀원</string>
    <string name="moment3">상상을 실재로.\n생각만 하던 것들을 실제로 조작할 수 있도록 구현을 한다는 부분에서 개발에 매력을 느껴서 지원하였습니다.</string>
    <string name="goal3">내일배움캠프를 통해 기본적인 역량을 갖추고, 취업을 하고 싶습니다.</string>
    <string name="resolve3">조금 늦더라도 포기하지 않고 끝까지 완주할 수 있도록 하여 목표를 달성하도록 하겠습니다.</string>


    <!-- 이성민 -->
    <string name="name4">이성민</string>
    <string name="birthday4">98. 01. 18</string>
    <string name="hobby4">프라모델 만들기</string>\
    <string name="mbti4">INFP</string>
    <string name="work4">팀원</string>
    <string name="moment4"> "많은 캠프 중에서 전액 국비지원이며 시작이 가장 빠른 캠프인 앱개발 캠프를, 그 중에도 제가 사용하는 모바일OS인 안드로이드 과정을 선택하게 되었습니다. </string>
    <string name="goal4">"본 캠프에서 앱개발에 대해 배워서 안정적이고 사용감이 좋은 앱을 개발하는 것"</string>
    <string name="resolve4">"중도 포기하지 않고 끝까지 열심히 역량을 키워가겠습니다."</string>
    <string name="title_activity_cradit">CraditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>