<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/go_main"
        android:title="메인화면" />
    <item
        android:id="@+id/go_team"
        android:title="팀 소개" />
    <item
        android:id="@+id/go_member"
        android:enabled="false"
        android:title="팀원 소개" />
    <item
        android:id="@+id/go_member1"
        android:title="@string/name1" />
    <item
        android:id="@+id/go_member2"
        android:title="@string/name2" />
    <item
        android:id="@+id/go_member3"
        android:title="@string/name3" />
    <item
        android:id="@+id/go_member4"
        android:title="@string/name4" />
    <item
        android:id="@+id/themeMode"
        android:title="테마 변경" />
    <item
        android:id="@+id/go_calendar"
        android:title="일정 추가" />
    <item
        android:id="@+id/go_comment"
        android:title="방명록" />
    <item
        android:id="@+id/go_maker"
        android:title="만든이" />
</menu>